0.16 16jan2017
* added support for Rubicson temperature sensor
* ensure hex identifiers for acurite sensors

0.15 15jan2017
* default to json format (-F json)
* json support for acurite 5-in-1 sensors
* added support for hideki wind and rain packets
* added support for lacrosse TX141TH-Bv2 packets
* default to loading all rtl decoders (-G)

0.14 12jan2017
* provide more feedback during shutdown for debugging
* attempt to do better shutdown of rtl_433 process
* fixed bug in delta reporting log message

0.13 11jan2017
* deal with changes to acurite decoder in rtl-433 - use json now

0.12 03nov2016
* added option to enumerate supported sensors
* added support for OS WGR800 and PCR800 sensors
* added support for lacrosse rainfall messages
* provide feedback when no permission to read usb device
* added support for Calibeur RF104 sensors
* added support for acurite lightning sensor
* handle negative temperatures
* added experimental support for json format

0.11 31oct2016
* added parser for acurite 986 packets (thanks to andy)
* removed vestigial code from data_type
* use glob matching for sensor identifier tuple components

0.9 29sep2016
* added generic support for rain_total and other cumulative measures
* for acurite 5n1, get rain from type 31 message instead of reset message

0.8 25sep2016
* added support for OSTHGR122NPacket (thanks to marco tibaldi)

0.7 12sep2016
* improved process management
* report errors better during startup
* use new mapping syntax output=input
* added comments about how to configure
* options to log unparsed packets
* options to log unmapped data from parsed packets

0.1 30mar2016
* initial release